# NoAI

./: .gitignore  .pylintrc  LICENSE  LICENSE.md  README.md  check_watermark.py  setup.cfg  setup.py  watermark.bat  watermark.py  watermark.sh
.github/workflows/: ubuntu.yml  windows.yml
docs/: LEGAL.md
src/: __init__.py  cli.py  decode.py  encode.py  tree_utils.py
