[metadata]
name = no_ai
version = 2.0.0
long_description_content_type = file: README.md
description = Generate invisible AI watermarks.
author = eballai, MolassesLover
url = https://github.com/eballai/NoAI
license = MIT

[options]
install_requires =
    colorama 
    SCons 
    opencv-python 
    invisible-watermark
packages = find:
include_package_data = True

[options.entry_points]
    console_scripts = 
        no_ai = no_ai.cli:main